app/src/test/resources/programs/invalid/MultipleLoopsWithSameLabel.extenstion
fun main() -> Int = {
    loop@firstLoop {
        loop@firstLoop {
            break@firstLoop 1;
        }
    }
}